2006-07-04  Rodrigo Moya <rodrigo@gnome-db.org>

	Initial import