@@ -2,9 +2,9 @@ noinst_PROGRAMS =	\
 	test-list-actions
 
 INCLUDES =			\
-	$(AUTOMATOR_CFLAGS)
+	$(ATOMATO_CFLAGS)
 
 test_list_actions_SOURCES = test-list-actions.c
-test_list_actions_LDADD = 					\
-	$(AUTOMATOR_LIBS)					\
-	$(top_builddir)/libgnomeautomator/libgnomeautomator.la
+test_list_actions_LDADD = 				\
+	$(ATOMATO_LIBS)					\
+	$(top_builddir)/libatomato/libatomato.la
