@@ -1,3 +1,10 @@
 2006-07-04  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* tests/test-list-actions.c:
+	* libatomato/dbus-action-provider.c:
+	* libatomato/atomato-action-provider.[ch]:
+	* libatomato/atomato.[ch]: finished GnomeAutomator -> Atomato renaming.
+
+2006-07-04  Rodrigo Moya <rodrigo@gnome-db.org>
+
 	Initial import
